--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,65 @@
-/* RESET */
-
-* {
+body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/* GENERAL */
-
-html {
-    font-family: Arial, Helvetica, sans-serif;
+.carousel-container {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
 }
 
-.container {
-    max-width: 1000px;
+.carousel-slides {
+    display: flex;
+    width: 500%; 
+    transition: transform 0.5s ease-in-out; 
+}
+
+.carousel-slide {
+    position: relative; 
+    flex: 0 0 20%; 
+    box-sizing: border-box;
+    /* padding: 0 10px;  */
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 400px; 
+}
+
+.carousel-slide img {
+    max-height: 100%; 
+    max-width: 100%; 
+    display: block;
     margin: 0 auto;
+}
+
+#prev,
+#next {
+    position: absolute;
+    top: 50%;
+    background-color: #3498db;
+    color: #fff;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 50%; 
+    width: 50px; 
+    height: 50px; 
+    text-align: center; /
+}
+
+
+#prev {
+    left: 100px; 
+}
+
+#next {
+    right: 100px; 
+}
+
+#prev:hover,
+#next:hover {
+    background-color: #2980b9;
 }
